--- a/Demo/Info.plist
+++ b/Demo/Info.plist
@@ -32,5 +32,7 @@
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array/>
+	<key>NSMainNibFile</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
