--- a/XibFree/XibFree.csproj
+++ b/XibFree/XibFree.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -11,6 +12,11 @@
     <AssemblyName>XibFree</AssemblyName>
     <TargetFrameworkIdentifier>Xamarin.iOS</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>XibFree</PackageId>
+    <PackageVersion>1.0</PackageVersion>
+    <Authors>TingtingAn</Authors>
+    <Description>XibFree for Xamarin.IOS</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,8 +39,7 @@
         <Command>
           <type>AfterBuild</type>
           <command>cp ${TargetFile} ${SolutionDir}/out</command>
-          <workingdir>
-          </workingdir>
+          <workingdir></workingdir>
         </Command>
       </CustomCommands>
     </CustomCommands>
@@ -126,5 +131,9 @@
     <Compile Include="Visibility.cs" />
     <Compile Include="UILayoutHostScrollable.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets')" />
 </Project>
