--- a/XibFree/XibFree.csproj
+++ b/XibFree/XibFree.csproj
@@ -130,6 +130,7 @@
     <Compile Include="PublicExtensions.cs" />
     <Compile Include="Visibility.cs" />
     <Compile Include="UILayoutHostScrollable.cs" />
+    <Compile Include="WrapLayout.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets')" />
