--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -92,6 +92,7 @@
     <Compile Include="DashBoardView.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="WrapLayoutDemo.cs" />
     <None Include="GettingStarted.Xamarin" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
