added the gridlayout and demo

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -90,6 +90,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DashBoardView.cs" />
+    <Compile Include="GridLayoutDemo.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="WrapLayoutDemo.cs" />
