--- a/XibFree/XibFree.csproj
+++ b/XibFree/XibFree.csproj
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Grid.cs" />
+    <Compile Include="GridLayout.cs" />
     <Compile Include="LayoutParameters.cs" />
     <Compile Include="ViewGroup.cs" />
     <Compile Include="LinearLayout.cs" />
