* AssemblyInfo.cs: add the assemblyinfo
* XibFree.csproj:

--- a/XibFree/XibFree.csproj
+++ b/XibFree/XibFree.csproj
@@ -39,8 +39,7 @@
         <Command>
           <type>AfterBuild</type>
           <command>cp ${TargetFile} ${SolutionDir}/out</command>
-          <workingdir>
-          </workingdir>
+          <workingdir></workingdir>
         </Command>
       </CustomCommands>
     </CustomCommands>
@@ -131,6 +130,7 @@
     <Compile Include="Visibility.cs" />
     <Compile Include="UILayoutHostScrollable.cs" />
     <Compile Include="WrapLayout.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.157-dev\build\NuGet.Build.Packaging.targets')" />
