--- a/Demo/Info.plist
+++ b/Demo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Demo</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.Demo</string>
+	<string>com.boundlss.iphone</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
