--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Demo/obj/iPhone/Debug
 /Demo/obj/iPhoneSimulator/Debug
 /Demo/bin/iPhoneSimulator/Debug
+/packages/NuGet.Build.Packaging.0.1.324
+/packages/NuGet.Build.Packaging.0.1.324
