fixed the layer animate

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Demo/bin/iPhoneSimulator/Debug
 /packages/NuGet.Build.Packaging.0.1.324
 /packages/NuGet.Build.Packaging.0.1.324
+/Demo/obj/iPhone/Release
