--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /packages/NuGet.Build.Packaging.0.1.324
 /packages/NuGet.Build.Packaging.0.1.324
 /Demo/obj/iPhone/Release
+/.vs/XibFree/v15/sqlite3
