--- a/XibFree/XibFree.csproj
+++ b/XibFree/XibFree.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkIdentifier>Xamarin.iOS</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v1.0</TargetFrameworkVersion>
     <PackageId>XibFree</PackageId>
-    <PackageVersion>1.1.1.4-beta</PackageVersion>
+    <PackageVersion>1.2.0</PackageVersion>
     <Authors>TingtingAn</Authors>
     <Description>XibFree for Xamarin.IOS</Description>
     <Owners>tingtingan</Owners>
