small fix for gone view frame

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Demo/obj/iPhone/Release
 /.vs/XibFree/v15/sqlite3
 /.vs/XibFree/v15/Server/sqlite3
+/Demo/obj/iPhoneSimulator/Release
+/.vs/XibFree/v15/.suo
